# codecrafters-shell-c

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  TODO.md  build.sh  your_program.sh
.codecrafters/: compile.sh
.zed/: debug.json
src/: build.c  builtins.c  builtins.h  definitions.h  main.c  playground.c  stringplayground.c
src/base/: arena.c  arena.h  core.h  defines.h  string.c  string.h
